Fixed issue with background not stretching

--- a/css/aeksiaSinglePage.css
+++ b/css/aeksiaSinglePage.css
@@ -8,6 +8,11 @@
     box-sizing: border-box;
 }
 
+html {
+  background: url("../images/aeksia_BG-star-desktop.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
@@ -110,11 +115,6 @@ footer {
   align-content: space-between;
   height: 100vh;
   width: 100%;
-  background-image: url("../images/aeksia_BG-star-desktop.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-  background-color: #06374d;
-  background-position: center center;
 }
 
 .top {
@@ -165,6 +165,7 @@ footer {
   width: 100%;
   height: 25%;
   text-align: center;
+  margin: 0 0 10px 0;
 }
 
 @media (max-width: 500px) {
